force-app/main/default/objects/Suspense__c/Suspense__c.object-meta.xml
<CustomObject>
    <label>Suspense</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Suspense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suspense</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>