force-app/main/default/objects/Suspense__c/fields/DateNoticeSent__c.field-meta.xml
<CustomField>
    <fullName>DateNoticeSent__c</fullName>
    <label>Date Notice Sent</label>
    <type>Date</type>
</CustomField>