force-app/main/default/objects/Suspense__c/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete</label>
    <type>Checkbox</type>
</CustomField>