force-app/main/default/objects/Suspense__c/fields/Historical__c.field-meta.xml
<CustomField>
    <fullName>Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical</label>
    <type>Checkbox</type>
</CustomField>