force-app/main/default/objects/Suspense__c/fields/InsuranceType__c.field-meta.xml
<CustomField>
    <fullName>InsuranceType__c</fullName>
    <description>PacPoint-KN08062020 - Created for PVL Phase 1 Sprint 6</description>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insurance_Types</valueSetName>
    </valueSet>
</CustomField>