force-app/main/default/objects/Suspense__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Suspense</relationshipLabel>
    <relationshipName>Suspense</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>