force-app/main/default/objects/Suspense__c/fields/MaintenanceType__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceType__c</fullName>
    <label>Maintenance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BA - FILE CHANGE OF BUSINESS ADDRESS</fullName>
            </value>
            <value>
                <fullName>BCHK - BOUNCED CHECK - GENERIC</fullName>
            </value>
            <value>
                <fullName>BCLF - BOUNCED CHECK - LICF</fullName>
            </value>
            <value>
                <fullName>BCNL - BOUNCED CHECK - NEW LICENSEE</fullName>
            </value>
            <value>
                <fullName>BCRN - BOUNCED CHECK - RENEWAL</fullName>
            </value>
            <value>
                <fullName>BCRS - BOUNCED CHECK - RESTORATION</fullName>
            </value>
            <value>
                <fullName>BCSF - BOUNCED CHECK SERVICE FEE</fullName>
            </value>
            <value>
                <fullName>BPLF - BOUNCED CHECK REPAYMENT - LICF</fullName>
            </value>
            <value>
                <fullName>BPRS - BOUNCED CHECK RNEW/RSTR, REPAYMENT RESTORATION</fullName>
            </value>
            <value>
                <fullName>BRDR - BOARD REVIEW AT SUSPENSE DATE</fullName>
            </value>
            <value>
                <fullName>CONT - PRINCIPAL MISSING CONTINUING ED REQUIREMENT</fullName>
            </value>
            <value>
                <fullName>CRSE - COURSE DUE</fullName>
            </value>
            <value>
                <fullName>CS - CLOSE OR EXTEND SITE OFFICE</fullName>
            </value>
            <value>
                <fullName>EC - EMPLOYER CLOSED</fullName>
            </value>
            <value>
                <fullName>FM - PROVE FAMILY MEMBER STATUS</fullName>
            </value>
            <value>
                <fullName>FRMR - EMPLOYER MUST RENEW</fullName>
            </value>
            <value>
                <fullName>IE - FILE INACTIVE OR NEW EMPLOYER</fullName>
            </value>
            <value>
                <fullName>IWBD - BOND DUE</fullName>
            </value>
            <value>
                <fullName>IWLI - LIABILITY DUE</fullName>
            </value>
            <value>
                <fullName>IWLP - LIABILITY/PROPERTY DAMAGE DUE</fullName>
            </value>
            <value>
                <fullName>IWSL - SELF-INSURED FOR W/C</fullName>
            </value>
            <value>
                <fullName>IWSW - WORKERS COMP THRU LEASING CO. DUE</fullName>
            </value>
            <value>
                <fullName>IWWC - WORKERS COMPENSATION DUE</fullName>
            </value>
            <value>
                <fullName>IZBD - BOND EXPIRED</fullName>
            </value>
            <value>
                <fullName>IZLI - LIABILITY EXPIRED</fullName>
            </value>
            <value>
                <fullName>IZLP - LIABILITY/PROPERTY DAMAGE EXPIRED</fullName>
            </value>
            <value>
                <fullName>IZSL - SELF-INSURED FOR W/C EXPIRED</fullName>
            </value>
            <value>
                <fullName>IZSW - WORKERS COMP THRU LEASING CO. EXPIRED</fullName>
            </value>
            <value>
                <fullName>IZWC - WORKERS COMPENSATION EXPIRED</fullName>
            </value>
            <value>
                <fullName>LCR1 - LICENSE CONDITIONAL REVIEW PAST DUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>