force-app/main/default/objects/Suspense__c/fields/SuspenseDueDate__c.field-meta.xml
<CustomField>
    <fullName>SuspenseDueDate__c</fullName>
    <label>Suspense Due Date</label>
    <type>Date</type>
</CustomField>