force-app/main/default/objects/Suspense__c/fields/SuspenseStatus__c.field-meta.xml
<CustomField>
    <fullName>SuspenseStatus__c</fullName>
    <description>PacPoint-KN08072020-Created for PVL Phase 1 Sprint 6</description>
    <label>Suspense Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LicenseStatuses</valueSetName>
    </valueSet>
</CustomField>